--- a/Kinect_WpfProject/Kinect_WpfProject/View/GestureSelect.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/GestureSelect.xaml
@@ -5,42 +5,68 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kinect_WpfProject.View"
         mc:Ignorable="d"
-        Title="FilmMenu" Height="363.971" Width="606.617"  Background="#343838" Cursor="Hand" WindowState="Normal" WindowStartupLocation="CenterScreen">
-    <Grid>
+        Title="FilmMenu" Height="363.971" Width="606.617"  Background="#343838" Cursor="Hand" WindowState="Maximized" WindowStartupLocation="CenterScreen">
+   
+        <Grid >
+        <Viewbox Stretch="UniformToFill">
+            <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="252" Margin="10,10,0,0" TextWrapping="Wrap"  Foreground="#FFF1E7E7" VerticalAlignment="Stretch" Width="200"><Run Text="選"/><LineBreak/><Run Text="擇"/><LineBreak/><Run Text="復"/><LineBreak/><Run Text="健"/><LineBreak/><Run Text="動"/><LineBreak/><Run Text="作"/></TextBlock>
+        </Viewbox>
         <ScrollViewer x:Name="ScrollViewer" >
-            <StackPanel>
-                <Button x:Name="ShoulderExtension_button" Height="165" Width="483" Margin="100,30,10,0" Click="Button_Click">
-                    <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
-                </Button>
-                <Button x:Name="button2"  Height="165" Width="483" Margin="100,0,10,0">
-                    <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
-                </Button>
-                <Button x:Name="button3"  Height="165" Width="483" Margin="100,0,10,0">
-                    <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
-                </Button>
-                <Button x:Name="button4"  Height="165" Width="483" Margin="100,0,10,0">
-                    <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
-                </Button>
-                <Button x:Name="button5"  Height="165" Width="483" Margin="100,0,10,0">
-                    <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
-                </Button>
-                <Button x:Name="button6"  Height="165" Width="483" Margin="100,0,10,30">
-                    <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
-                </Button>
+            <Viewbox Stretch="UniformToFill ">
+                <StackPanel>
 
-
-
-            </StackPanel>
-
+                    <Button x:Name="ShoulderExtension_button" Click="Button_Click" Height="165" Width="483" Margin="100,30,10,0" >
+                        <Image Source="/ShoulderExtension.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Shoulder_flexion" Click="Button_Click"  Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ShoulderFlexion.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Shoulder_abduction" Click="Button_Click"  Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ShoulderAbduction.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Shoulder_horizontal_abduction" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ShoulderHorizontalAbduction.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Shoulder_scaption" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ShoulderScaption.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Shoulder_external_rotation" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ShoulderExternalRotation.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Shoulder_internal_rotation" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ShoulderInternalRotation.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Elbow_flexion" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ElbowFlexion.JPG" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Elbow_flexion_2" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ElbowFlexion2.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Elbow_extension" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ElbowExtension.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Forearm_pronation" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/ForearmPronation.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Wrist_extension" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/WristExtension.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Wrist_extension_2" Click="Button_Click" Height="165" Width="483" Margin="100,0,10,0">
+                        <Image Source="/WristExtension2.jpg" Width="510" Height="165"/>
+                    </Button>
+                    <Button x:Name="Wrist_flexion" Click="Button_Click"  Height="165" Width="483" Margin="100,0,10,30">
+                        <Image Source="/WristFlexion.jpg" Width="510" Height="165"/>
+                    </Button>
+                </StackPanel>
+            </Viewbox>
         </ScrollViewer>
-
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="252" Margin="10,37,0,0" TextWrapping="Wrap" FontSize="24" Foreground="#FFF1E7E7" VerticalAlignment="Top" Width="69"><Run Text="選"/><LineBreak/><Run Text="擇"/><LineBreak/><Run Text="復"/><Run Text="　　　"/><Run Text="健"/><LineBreak/><Run Text="動"/><LineBreak/><Run Text="作"/></TextBlock>
-        <Button x:Name="button" Content="MainMenu" Foreground="White" Background="Black" HorizontalAlignment="Left" Height="27" Margin="10,270,0,30" VerticalAlignment="Top" Width="76"/>
-        <Button x:Name="button_ScrollDown" MouseEnter="ScrollDownStart"  HorizontalAlignment="Left" Height="9" Margin="0,324,0,0" VerticalAlignment="Top" Width="582"/>
-        <Button x:Name="button_ScrollUp" MouseEnter="ScrollUpStart"  HorizontalAlignment="Left" Height="9" VerticalAlignment="Top" Width="582"/>
+       
+        <Button x:Name="button_ScrollDown" MouseEnter="ScrollDownStart" Background="#343838" Height="20" Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Width="auto"/>
+        <Button x:Name="button_ScrollUp" MouseEnter="ScrollUpStart"  Background="#343838" Height="20" Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="auto"/>
 
 
 
 
-    </Grid>
+        </Grid>
+
 </Window>
