--- a/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Kinect_WpfProject.View.Menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"  Height="363.971" Width="606.617"  Background="#343838" Cursor="Hand" WindowState="Normal" WindowStartupLocation="CenterScreen">
+        Title="MainWindow"  Background="#343838" Cursor="Hand"  Height="363.971" Width="606.617"  WindowState="Normal" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Storyboard x:Key="LeftStoryboard_F">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Main_menu">
@@ -134,8 +134,8 @@
                     <TextBlock FontSize="36" Foreground="White" Height="338" Text="" Width="73" />
                 </Button>
 
-                <Button  x:Name="button3" 
-        			HorizontalContentAlignment="Right" BorderThickness="0" VerticalContentAlignment="Bottom"   Click="buttonUserGestureRecognize_Click"  Margin="0,0,-5,78" Grid.ColumnSpan="2" Height="245" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+                <Button  x:Name="button3"   Background="#343838" 
+        			HorizontalContentAlignment="Right" BorderThickness="0" VerticalContentAlignment="Bottom"   Click="buttonUserGestureRecognize_Click"  Margin="0,0,-5,78" Grid.ColumnSpan="2" Height="245" VerticalAlignment="Bottom" Grid.Column="1">
                     <Image Source="/Recognize.jpg" Height="245" Width="339" />
                     <Button.RenderTransform>
                         <TransformGroup>
@@ -148,7 +148,7 @@
                 </Button>
             </Grid>
         </Canvas>
-        <Canvas x:Name="Left_menu" HorizontalAlignment="Left" Margin="-423,248,0,18" Width="441" RenderTransformOrigin="0.5,0.5">
+        <Canvas x:Name="Left_menu" HorizontalAlignment="Left" Margin="-407,244,0,22" Width="441" RenderTransformOrigin="0.5,0.5">
             <Canvas.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -158,35 +158,15 @@
                 </TransformGroup>
             </Canvas.RenderTransform>
 
-            <Button Background="#00C5CD" x:Name="button_Left" 
-        			HorizontalContentAlignment="Right" BorderThickness="0" VerticalContentAlignment="Top"  Click="buttonSampleRecord_Click" Grid.ColumnSpan="2"  VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Canvas.Top="-179" Height="257" Width="360" Canvas.Left="32">
-                <Image Source="/Record.jpg" Height="257" Width="352" RenderTransformOrigin="0.5,0.5" >
-                    <Image.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform AngleX="-0.14"/>
-                            <RotateTransform/>
-                            <TranslateTransform X="-0.331"/>
-                        </TransformGroup>
-                    </Image.RenderTransform>
-                </Image>
-                <Button.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Button.RenderTransform>
+            <Button   Background="#343838"  x:Name="button_Left" 
+        			HorizontalContentAlignment="Right" BorderThickness="0" VerticalContentAlignment="Top"  Click="buttonSampleRecord_Click" Grid.ColumnSpan="2"  VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Canvas.Top="-179" Height="245" Width="349" Canvas.Left="43">
+                <Image Source="/Record.jpg" Height="259" Width="352" RenderTransformOrigin="0.5,0.5" />
 
             </Button>
         </Canvas>
         <TextBlock Height="114" x:Name="textBlock1" Foreground="#FFF1E7E7" FontSize="48" Margin="34,10,10,0" VerticalAlignment="Top" Grid.Column="1" ><Run Text="K"/><Run Text="INECT"/><LineBreak/><LineBreak/><Run/></TextBlock>
         <TextBlock Height="114" x:Name="textBlock2" Foreground="#FFF1E7E7" FontSize="18" Margin="212,18,-168,0" VerticalAlignment="Top" Grid.Column="1" ><Run Text="應用於協助復健之"/><Run/><LineBreak/><Run Text="即"/><Run Text="時全身肢體辨識"/><LineBreak/><Run/><LineBreak/><LineBreak/><Run/></TextBlock>
-
     </Grid>
-
-
 </Window>
 
     
